[package]
name = "arena"
version = "0.1.0"
authors = ["Ozaren <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = '0.7.2'

[dev-dependencies]
criterion = '0.3.0'

[[bench]]
name = "perf-sync"
harness = false

[[bench]]
name = "perf-local"
harness = false
