[package]
name = "bit-code"
version = "0.1.0"
authors = ["Ozaren <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer-ext = { path = '../lexer-ext' }
parser-ext = { path = '../parser-ext' }
arena = { path = '../arena' }